--- a/pages/noel.html
+++ b/pages/noel.html
@@ -40,7 +40,7 @@
        </br> </br> </br> </br> </br> </br> </br> </br> </br> </br>
 <img style="padding-left:20%; " src="../images/noel/1.gif" >
 </br> </br> </br> </br><h1 style="color:lightblue;  text-align: end; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">JOYEUEJEOUEUJOYEUX JOEYUX NOEUEKL NOEL NOEL</h1> </br> </br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jSQ6u6XLYPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><img style="padding-left:40%; " src="../images/noel/2.gif" >
+<iframe style="box-shadow: 5px 10px red; padding-left:40%; width="560" height="315" src="https://www.youtube.com/embed/jSQ6u6XLYPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><img style="padding-left:40%; " src="../images/noel/2.gif" >
 </br> </br> </br> </br> <h1 style="color:lightblue;  text-align: center; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;">PRENER SOIND DE VOUS__ ET PASSEEE DE BONNESES FETES :)   </h1> </br> </br>
 <img style="padding-left:30%;" src="../images/noel/4.gif" >
 </br> </br> </br> </br>
@@ -49,4 +49,4 @@
 <img style="padding-left:5%;" src="../images/noel/6.gif" >
 </br> </br> </br> </br> 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ej62pZ1qFK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe style="box-shadow: 5px 10px red; padding-left:40%; width="560" height="315" src="https://www.youtube.com/embed/ej62pZ1qFK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
