--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<!-- Menu deroulant -->
 	<body background="images/fond.png">
-  			
+  	<script defer data-domain="remigeorges.fr" src="https://plausible.vocoda.sonnelier.club/js/plausible.js"></script>
 		<div class="top">
   			<ul class="list">
   			<li class="menu">
