--- a/pages/son.html
+++ b/pages/son.html
@@ -48,16 +48,17 @@
   		   </ul>
   		</div>			
 		<iframe id ="vid2" width="560" height="315" src="https://www.youtube.com/embed/pobHur7HwxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<p class="legende2"> Composition</br>Piece pour Accordéon et Live-coding</br>02/23</p>
 		<a id="vid" width"750" href ="http://www.vahansoghomonian.net/work/org-rchbrn/"><img width=750px src="http://www.vahansoghomonian.net/img/ORG-RCHBRN/1.jpg"></a>
 		  			<p class="legende"> Réalisation - Composition Informatique du mode Autonome </br> de l'ORG de Vahan Soghomonian, Drôme Provençale </br> 2022-2023</p>
 					<iframe id="vid2" width="560" height="315" src="https://www.youtube.com/embed/nR2wIfNl7FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<p class="legende2"> Live</br>Live à l'orgue</br>2022-09-01</p>
+					<p class="legende2"> Live</br>Live à l'orgue</br>09/22</p>
 					
 					<iframe id="vid" width="560" height="315" src="https://www.youtube.com/embed/REZo_SuifhY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<p class="legende"> Live/Algorave</br>Le_Fil_Saint-Étienne</br>2022-06-11</p>
+					<p class="legende"> Live/Algorave</br>Le_Fil_Saint-Étienne</br>06/22</p>
 					
 					<a id="vid2" width="750" href="https://grrrndzero.org/index.php/agenda2/agenda-passe/2336-sam-04-06-presentation-de-l-aada" ><img width=270px  src="../images/IMG_20220528_152259.jpg"></a>
-                                        <p class="legende2">Membre_de_l'AADA_06/04</p>
+                                        <p class="legende2">Membre_de_l'AADA_06/22</p>
                                         <a id="vid" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2313-ven-29-04-dymanche-jokari-undae-tropic-daesiidae"><img width=270px src="../images/29avril.jpg"></a>
 					<p class="legende"> Ingénieur_du_Son_04/22</p>
 					<a id="vid2" width="750" href="https://www.grrrndzero.org/index.php/agenda2/agenda-passe/2279-sam-2-04-soiree-contre-la-maxi-prison-en-belgique"><img width=270px src="../images/2avril.jpg"></a>
