--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
 	      <div id="rectg">
         <p class="titre">Rémi GEORGES </p>
         <p class="text"> 
-        Arrivé dans ce monde le <b>24/03/2000</b> </br >Pour communiquer au travers du Web </br> et m'envoyer des cartes postales numériques : </br>
+        Pour communiquer au travers du Web </br> et m'envoyer des cartes postales numériques : </br>
         <b>remi.georges@protonmail.com</b> </br> 
         
         </p>
@@ -50,10 +50,9 @@
       <div id="rectd">                                    <!-- Cadre Etudes et formations -->
         <p class="titre">Diplômes</p>
         <p class="text">
-		<p class="stitre">Master<i> Réalisateur en Informatique Musicale</i></p>Université Jean Monnet - Saint-Étienne, 2021-2023</br>
+	<p class="stitre">Master<i> Réalisateur en Informatique Musicale</i></p>Université Jean Monnet - Saint-Étienne, 2021-2023</br>
           <p class="stitre">Licence Professionnelle,<i> Nouvelles Technologies du Son</i></p>UFR Ingémedia - Toulon, 2020-2021</br>
          <p class="stitre">BTS Métiers de l'audiovisuel, <i>option métiers du son</i></p>Lycée Carnot - Cannes, 2018-2020</br> 
-
          <p class="stitre"> Baccalauréat Scientifique Sciences de l'ingénieur,</br><i>Spécialité Informatique et Sciences du Numérique</i> </p>Lycée Langevin - La-Seyne-sur-mer, Promotion 2018</br>
         </p>
          <p class="stitre"> Musicales, <i>Percussions Classiques</i> </p> Conservatoires Toulon-Provence-Méditerranée, 2008-2018 </br><i>Obtention du BEM, Niveau CEM </i>
@@ -66,9 +65,13 @@
       <div id="rectexp">
         <p class="titre">Parcours Professionnel</p>
       <p class="text">   
-	
+	<p class="stitre">GRAME, Centre National de Création Musicale, Lyon</p> 
+        <i>Stagiaire en Recherche, 03/2023 - 08/2023</i></br>
+        Travail sur la chaîne d'outils Syfala</br>
+        <b>Syfala :</b> Chaîne d'outils de compilation de programmes audio DSP Faust vers des FPGAs AMD-Xilinx.</br>
+	</br> <a href='https://github.com/inria-emeraude/syfala'>Lien Github</a>
 	<p class="stitre">NOVELTY - Famusique</p> 
-        <i>Intermittent, Depuis 2022</i></br>
+        <i>Intermittence, Depuis 2022</i></br>
         <b> Technicien Son</b> 
 	<p class="stitre">GRAME, Centre National de Création Musicale, Lyon</p> 
         <i>Stagiaire en Recherche, Avril 2022</i></br>
