--- a/pages/son.html
+++ b/pages/son.html
@@ -19,16 +19,12 @@
 		    </div>
   					</div>
           </li>
-          <!--<li class="menu2">
+          <li class="menu2">
             <div class="dropdown">
-            <div class="dropbtn"><a href="photo.html">Travaux</a></div>
-            <div class="dropdown-content">
-              <a href="photo.html">Photos</a>
-              <a href="visu.html">Dessins</a> 
-	    </div>
+            <div class="dropbtn">Travaux/div>
             </div>
             </li>
-	</li>-->
+	</li>
  <li class="menu">
             <div class="dropdown">
             <div class="dropbtn"><a class="livecoding" href="https://ralt144mi.github.io">Live-Coding</a></div>
