--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,6 +29,13 @@
             </div>
             </div>
             </li>
+						
+ 	<li class="menu">
+            <div class="dropdown">
+            <div class="dropbtn"><a class="livecoding" href="https://ralt144mi.github.io">Live-Coding</a></div>
+            <div class="dropdown-content"></div>
+  					</div>
+          </li>
   		   </ul>
   		</div>
 </br>
