--- a/pages/son.html
+++ b/pages/son.html
@@ -21,15 +21,14 @@
           </li>
           <li class="menu2">
             <div class="dropdown">
-            <div class="dropbtn">Travaux/div>
+            <div class="dropbtn">Travaux</div>
             </div>
             </li>
 	</li>
  <li class="menu">
             <div class="dropdown">
             <div class="dropbtn"><a class="livecoding" href="https://ralt144mi.github.io">Live-Coding</a></div>
-            <div class="dropdown-content"></div>
-  					</div>
+  		</div>
           </li>
             
 	  <li class="contact">
