--- a/pages/son.html
+++ b/pages/son.html
@@ -25,7 +25,7 @@
             </div>
             </li>
 	</li>
- <li class="menu">
+ 	<li class="menu2">
             <div class="dropdown">
             <div class="dropbtn"><a class="livecoding" href="https://ralt144mi.github.io">Live-Coding</a></div>
   		</div>
