--- a/pages/son.html
+++ b/pages/son.html
@@ -41,7 +41,9 @@
 		   
           
   		   </ul>
-  		</div>			
+  		</div>
+		<a id="vid" width="750" href="https://grrrndzero.org/index.php/2422-sam-08-04-algorave"><img width=560px src="https://remigeorges.fr/images/algorave_poster.png" ></a>
+		<p class="legende"> Organisation/Performance_Live_03/22 </p>
 		<iframe id ="vid2" width="560" height="315" src="https://www.youtube.com/embed/pobHur7HwxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		<p class="legende2"> Composition</br>Piece pour Accordéon et Live-coding</br>02/23</p>
 		<a id="vid" width"750" href ="http://www.vahansoghomonian.net/work/org-rchbrn/"><img width=750px src="http://www.vahansoghomonian.net/img/ORG-RCHBRN/1.jpg"></a>
