--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   			<ul class="list">
   			<li class="menu">
   					<div class="dropdown">
-  					<div class="dropbtn"><a href="index.html">Accueil</a></div>
+  					<div class="dropbtn"><a href="index.html">Home</a></div>
   					<div class="dropdown-content">
           </li>
 
   				<li class="menu2">
   					<div class="dropdown">
-						<div class="dropbtn"><a href="pages/son.html">Travaux</a></div>
+						<div class="dropbtn"><a href="pages/son.html">Works</a></div>
   					<div class="dropdown-content">
   						<!-- <a href="pages/son.html">Son/Vidéo</a>
              					<a href="pages/photo.html">Photos</a>
