--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,13 +14,13 @@
   			<ul class="list">
   				<li class="menu">
   					<div class="dropdown">
-  					<div class="dropbtn"><a href="../index.html">Accueil</a></div>
+  					<div class="dropbtn"><a href="../index.html">Home</a></div>
   					<div class="dropdown-content">
 
            </li>
             <li class="menu2">
             <div class="dropdown">
-            <div class="dropbtn"><a href="son.html">Travaux</a></div>
+            <div class="dropbtn"><a href="son.html">Works</a></div>
             <div class="dropdown-content">
              <!-- <a href="son.html">Son/Vidéo</a>
               <a href="photo.html">Photos</a>
