--- a/pages/son.html
+++ b/pages/son.html
@@ -14,14 +14,14 @@
   			<ul class="list">
   				<li class="menu">
             <div class="dropdown">
-            <div class="dropbtn"><a href="../index.html">Accueil</a></div>
+            <div class="dropbtn"><a href="../index.html">Home</a></div>
             <div class="dropdown-content">
 		    </div>
   					</div>
           </li>
           <li class="menu2">
             <div class="dropdown">
-            <div class="dropbtn">Travaux</div>
+            <div class="dropbtn">Works</div>
             </div>
             </li>
 	</li>
