--- a/index.html
+++ b/index.html
@@ -55,12 +55,18 @@
 </br>
 <!--
 <p class="news">NEWS </p> -->
-       <div id="rectnews"><code>
-▄ .▄▄▄▄ .▄▄▌  ▄▄▌          ▄▄▌ ▐ ▄▌      ▄▄▄  ▄▄▌  ·▄▄▄▄</br>
-██▪▐█▀▄.▀·██•  ██•   ▄█▀▄   ██· █▌▐█ ▄█▀▄ ▀▄ █·██•  ██· ██</br>
-██▀▀█▐▀▀▪▄██ ▪ ██ ▪ ▐█▌.▐▌  ██▪▐█▐▐▌▐█▌.▐▌▐▀▀▄ ██ ▪ ▐█▪ ▐█▌</br>
-██▌▐▀▐█▄▄▌▐█▌ ▄▐█▌ ▄▐█▌.▐▌  ▐█▌██▐█▌▐█▌.▐▌▐█•█▌▐█▌ ▄██. ██ </br>
-▀▀▀ · ▀▀▀ .▀▀▀ .▀▀▀  ▀█▄▀▪   ▀▀▀▀ ▀▪ ▀█▄▀▪.▀  ▀.▀▀▀ ▀▀▀▀▀• </br></code>
+       <div id="rectnews">
+	       <code style="text-align: left;">
+		       	━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</br>
+		       	━━┏┓━━━━━━┏┓━┏┓━━━━━━━━━━━━━━━━━━━━━━┏┓━━━┏┓━━━━</br>
+			━━┃┃━━━━━━┃┃━┃┃━━━━━━━━━━━━━━━━━━━━━━┃┃━━━┃┃━━━━</br>
+			━━┃┗━┓┏━━┓┃┃━┃┃━┏━━┓━━━━┏┓┏┓┏┓┏━━┓┏━┓┃┃━┏━┛┃━━━━</br>
+			━━┃┏┓┃┃┏┓┃┃┃━┃┃━┃┏┓┃━━━━┃┗┛┗┛┃┃┏┓┃┃┏┛┃┃━┃┏┓┃━━━━</br>
+			━━┃┃┃┃┃┃━┫┃┗┓┃┗┓┃┗┛┃━━━━┗┓┏┓┏┛┃┗┛┃┃┃━┃┗┓┃┗┛┃━━━━</br>
+			━━┗┛┗┛┗━━┛┗━┛┗━┛┗━━┛━━━━━┗┛┗┛━┗━━┛┗┛━┗━┛┗━━┛━━━━</br>
+		       ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</br>
+      
+	       </code>
 <marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau">My name is Rémi GEORGES</div></marquee>
        <marquee direction="right" behavior="alternate" scrollamount="8"><div  class="bandeau">i'm a Sound Engineer, Computer Music Director, musician and visual artist</div></marquee> 
        <div id="rectnews"><marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau"></div></marquee><marquee direction="right" behavior="alternate" scrollamount="8"><div  class="bandeau"> <!--Sortie Progressive de Interférences Suite--> </div></marquee><div id="rectnews"><marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau"><!--8/04/21--></div></marquee>
