--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!--
 <p class="news">NEWS </p> -->
        <div id="rectnews">
-	       <code style="text-align: left;">
+	       <code style="text-align: left; line-height: 11px; letter-spacing: -1px;">
 		       	━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</br>
 		       	━━┏┓━━━━━━┏┓━┏┓━━━━━━━━━━━━━━━━━━━━━━┏┓━━━┏┓━━━━</br>
 			━━┃┃━━━━━━┃┃━┃┃━━━━━━━━━━━━━━━━━━━━━━┃┃━━━┃┃━━━━</br>
