--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!--
 <p class="news">NEWS </p> -->
        <div id="rectnews">
-	       <code style="text-align: left; line-height: 11px; letter-spacing: -1px;">
+	       <div style="text-align: left; line-height: 11px; letter-spacing: -1px;">
 		       	━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</br>
 		       	━━┏┓━━━━━━┏┓━┏┓━━━━━━━━━━━━━━━━━━━━━━┏┓━━━┏┓━━━━</br>
 			━━┃┃━━━━━━┃┃━┃┃━━━━━━━━━━━━━━━━━━━━━━┃┃━━━┃┃━━━━</br>
@@ -66,7 +66,7 @@
 			━━┗┛┗┛┗━━┛┗━┛┗━┛┗━━┛━━━━━┗┛┗┛━┗━━┛┗┛━┗━┛┗━━┛━━━━</br>
 		       ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</br>
       
-	       </code>
+	       </div>
 <marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau">My name is Rémi GEORGES</div></marquee>
        <marquee direction="right" behavior="alternate" scrollamount="8"><div  class="bandeau">i'm a Sound Engineer</div></marquee> 
        <div id="rectnews"><marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau">Computer Music Director</div></marquee><marquee direction="right" behavior="alternate" scrollamount="8"><div  class="bandeau"> <!--Sortie Progressive de Interférences Suite--> </div></marquee><div id="rectnews"><marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau"><!--8/04/21--></div></marquee>
