--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,7 +36,14 @@
             <div class="dropdown-content"></div>
   					</div>
           </li>
-  		   </ul>
+  	<li class="contact">
+            <div class="dropdown">
+            <div class="dropbtn"><a href="contact.html">Contact</a></div>
+            <div class="dropdown-content"></div>
+  					</div></li>
+		    	   
+						
+						</ul>
   		</div>
 </br>
 </br>
