--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,7 +30,7 @@
             </div>
             </li>
 						
- 	<li class="menu">
+ 	<li class="menu2">
             <div class="dropdown">
             <div class="dropbtn"><a class="livecoding" href="https://ralt144mi.github.io">Live-Coding</a></div>
             <div class="dropdown-content"></div>
