--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,8 +72,101 @@
          <p class="stitre"> Musicales, <i>Percussions Classiques</i> </p> Conservatoires Toulon-Provence-Méditerranée, 2008-2018 </br><i>Obtention du BEM, Niveau CEM </i>
       </div>
 
-      <div> 
-       <img id="imageprofil" src="../images/profil.jpg"  >    <!-- Image de profil -->
+      <div id="imageprofil"> 
+       <!-- <img id="imageprofil" src="../images/profil.jpg"  > -->
+	<code style="font-size: 6px;">----------------------------------------------------------------------------------------------------------------------------------</br>
+-------------------------------------------------------------------==-------------------------------------------------------------</br>
+------------------------------------------------------------------=+*+=-----------------------------------------------------------</br>
+------------------------------------------------------------------+**=--------=---------------------------------------------------</br>
+-----------------------------------------------------------------=+*+=-------+=---------------------------------------------------</br>
+--------------------------------------------------==------------=+**=-------==----------------------------------------------------</br>
+---------------------------------------------------++=----------=***+=------+=--------=-------------------------------------------</br>
+-------------------------------------------------+=+**=--------=+*++++=----=+---------=-------------------------------------------</br>
+------------------------------------------------=+*+###+======+*#*#*##+=--+++=-=--=+===-------------------------------------------</br>
+------------------------------------------------==*###%%############%%#+**##*++===*+===-----------==------------------------------</br>
+-------------------------------------=-------==++**#%%%@%%%%%%%%%%%%%%%%%%%%%##++**==+=-------======------------------------------</br>
+------------------------------------+---===+*##%##*#%%@@@@%%%@%%@@%%@@%%%%%%%%%#%%%###+====+++++++======--------------------------</br>
+-----------------------------------=*++***##%%%%###%%%@@@@@@@@@@@@%@@@@@@@@@%%%%%%%%%%#####*####***##**+==------------------------</br>
+---------------------------------=+*####%%%#####*##%%%@@@@@@@@@@@@%@@@@@@@@@@@@%@%%%%%%%##%%%###%%###+=---------------------------</br>
+---------------:---------------=+*#%#%%%%#######*##%@@%@@@@@@@@%@@@@@@@@@@@@@%@@@@@@@@%%%%%%%%%%%%%#+=----------------------------</br>
+-------------:::--------------=*##%%%#%@%%%%######%%%@%%@@@@@@@%@@@@@@@@@@@@@@@@@@@%@@@@@@@%%@@%%%%##*+===------------------------</br>
+-------:---::---------------++##%@@%%%%%%%#####**#%@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@@@@%%%##**+=---------------------------</br>
+---------------------------+*##%%@@@%##%%##%%**+##%%@@%@@@@@@@@@@@@%%%@@@@@@@@@@@@@%%@@@@@@@@@%%%*=-------------------------------</br>
+--------------------------=###%%%%###%%%#*#*+++%%%%%%@@%%@@@@@@@@@@@@@@@@@@%@@@@@@@%%@@@%@@%%%###*+=------------------------------</br>
+-------------------------=##%#**##%%%##****=+*#%%%%%%%@@%%%@@@@@@@@@@@@@@@@@@%@%@@@@%%%%%@@%%%%%%###*+=---------------------------</br>
+-------------------------*#%%%#######**#*+++##%%#%#%%%%%@@%@@@@@@%%%%%%%%%%%%%%%%%%%%%%%@%@@%%#***+=======------------------------</br>
+-------:--:::-----------+*#%%#%%#**##*#**+***###***###%%%%%%%%%%%%%%%%%%%#########%%%%%%%%%%%%%%%#*=====--------------------------</br>
+-::--:::--::--::------=**#%%##%%###*###**##*#**+++++**#####################*****######%%%%%%%%%%%%%#*+==--------------------------</br>
+::::::::::::::::---=+**##%%%#%%%#%##%##**#****+++==+==+***#########******************##%%%%%%##%%%%%##*+==------------------------</br>
+::::::-:::::::::--==+==+**#%%%########**++***+++++=====+++**********+++++++************##%%%%%%#######*====-----------------------</br>
+::::::::::::::::--==+++++*##%###%###***+++++++++==========+++++++====-====++++++++******##%%##%%%##***+=--------::---:---::-------</br>
+::::::::::::::::--===++***####*+##*#*+++=============------------------=====++++++++++***########%##*++===---------:::---:--::----</br>
+:::::::::::::::::---===+*#***#+++***++++=------------------------------==========+++++++**#########**==-------:::::::::::--::-::-:</br>
+::::::::::::::::::--=+**#*+***++++*++++==-------------------------==============+++++++++**##%#####**=---:--::::::::::::::::::::::</br>
+:::::::::::::::::::---=++*+*+*++++++++==------=======+================++++***###########****%%%####**+---:::::::::::::::::::::::::</br>
+::::::::::::::::::::::-==+++**++++++++=--==+**###%#####**++=======+++++*##%%%%%###******###*#%%%%###*+=--:::::::::::::::::::::::::</br>
+::::::::::::::::::::::---+++**++++*+*+==+*******##########*+++=====++**########*****+++++**#*#%%%####+=--:::::::::::::::::::::::::</br>
+::::::::::::::::::::::---=+++*++*****+=++++====++*######****+=----==+*****#%%%%%@%%#####*+++**%%%%###*=-::::::::::::::::::::::::::</br>
+::::::::::::::::::::::::-=++*+++#*#**++====+*#%%%@%%##%%%#*++=-----==+***#%%##%%@%%**#%##*++++*@%####==-::::::::::::::::::::::::::</br>
+::::::::::::::::::::::::--=+*+**###*++===+##%#*#%%%#**#%%#*==------==+***##%####***+******+++++%%%#*+--------:::::::::::::::::::::</br>
+:::::::::::::::::::::::::-=++**###**+=-=++++++++******++===---::---==+*++++++++++++++++++++++++*%%*+=----------:::::::::::::::::::</br>
+::::::::::::::::::::::::::-=++#%##**=-----:---=========------:::---==+++++=====================+#%*====-----------::::::::::::::::</br>
+::::::::::::::::::::::::::---=#%%#*=::::::::::-------------::::----===+++++=====================##*======----------:::::::::::::::</br>
+::::::::::::::::::::::::::::--*%%#=::::::::::--------------::::::--====++*++===========--=======*#+=========---------:::::::::::::</br>
+::::::::::::::::::::::::::::::=#%#-::..::::::--------------::::----===++++++======-----=======+++*=============-------::::::::::::</br>
+:::::::::::::::::::::::::::::::+#*-::::::::::--::------==-:------====++**++++======--=-======+==++=============-------::::::::::::</br>
+:::::::::::::::::::::::::::::::-==:::::::::::::-------===:-=***==++++*%%%#*+*+=================================--------:::::::::::</br>
+:::::::::::::::::::::::::::::::--=::::::::::---------=====+#%%%#++****####****+==============++=+==============---------::::::::::</br>
+::::::::::::::::::::::::::::::::--:::::::::------------=--=*#*+++*******##*****+===========++++=+================---------::::::::</br>
+:::::::::::::::::::::::::::::::::--:::::::---------------------===++***********++==========+++==+================------------:::::</br>
+::::::::::::::::::::::::::::::::::-::::::---------==---------=======+***##*****++=========++++=++================--------------:::</br>
+:::::::::::::::::::::::::::::::::--::::::------------------============++*********++++++=+++++++*===============-----------------:</br>
+::::::::::::::::::::::::::::::::::--::::-------=----====---==+++++++++************##*+++=++++++**===============------------------</br>
+::::::::::::::::::::::::::::::::::-=--:----------==+*+===+*******#################***++=+++++*+*++==============------------------</br>
+:::::::::::::::::::::::::::::::::::-------------==+*######**++++++**++++++**##*****++++++++++*++================------------------</br>
+:::::::::::::::::::::::::::::::::::-=-----------==+++===================+++++*++++++++++++++++#*=============---------------------</br>
+:::::::::::::::::::::::::::::::::::--=-----------===-----===========+++++++**++++++++++++++++#%%*===========----------------------</br>
+:::::::::::::::::::::::::::::::::::::==---------===-----====+++***************++++++++++++++*%%%%*==========----------------------</br>
+:::::::::::::::::::::::::::::::::::::=++=-==-=---------======+++************+++++++++++++++#%%%%%%*+========----------------------</br>
+::::::::::::::::::::::::::::::::::::--=##+===-----------=================+++++++++++++++**%@%%%%%%#+*=======----------------------</br>
+:::::::::::::::::::::::::::::::::::::-=+##*+===-----------------=============+++++***+**#%@@@%%%%%%#+=======----------------------</br>
+:::::::::::::::::::::::::::::::::::::-++***+++++===-----------=========++===++*+**#*##**%@@@%%%%%%%#*+======----------------------</br>
+:::::::::::::::::::::::::::::::::::--=-+*+=++-=++++====------====+++++++++++****##%#*++*%%%@%%%##%%#**+========-------------------</br>
+::::::::::::::::::::::::::::::::::----=+**=-=---==+**++=======++++************####*+++**%%%%%%%#####*+==========------------------</br>
+::::::::::::::::::::::::::::::::::--:-+++*=--=---===+**#**+******######**####%#*+++++++*%%%%%%#*****++===========-----------------</br>
+::::::::::::::::::::::::::::::::::----+==+=--+----=====+*##%######%%%%%%%%##*++++++++++*%%####******+============-----------------</br>
+::::::::::::::::::::::::::::::::::---==--=+--+=-----=====++***########***++++++++++++++#%%#********+*+===+=========---------------</br>
+:::::::::::::::::::::::::::::::---=---=--=+--=+------======+++++++++++++++++++++++++++*###**++***++***+++============-------------</br>
+:::::::::::::::::::::::::::::---=---------=+===-------======++++++++++++++++++++++++++#%*#*+++#*******##*+++++=========-----------</br>
+::::::::::::::::::::::-::::::-----------=++*+-=+-------====++++++++++++++++++++++++++*%#*#**++##*****##%#**#%*+++========---------</br>
+:::::::::::::::::::::*+-:-::------==+==-+**#+--**=-------===++++++++++++++++++++++++*%%**##*++##******#%%#*++++++++++======-------</br>
+:::::::::::::::::::::#+--:::-:-=========+##%+--=++=--------====++++++++++++++++++++*%%#**###***#**####%%%#**++++++++===+=====-----</br>
+:::::::::::::::::--::++-:::---======+*+==###*---=#*==------======+++++++++++++++++*#@%*+#%%#***#***#######**#***+==========----=--</br>
+:::::::::::--:::::----=------=++**+++==+-*###=---=#*+=============+++++++++++++++*%@%#+**%%@#**#%**#*##%%##*#####*+=--------==-=-=</br>
+:::::::::-==--:::--=--=+----=++*+++====+-*##+:----=#*+=============+++++++++++++*%@@#*+#*#%%%***%***#***####****##*+===------=---=</br>
+:-:::::::-=---:::-==-==+====+*#*++=+++=*-*##-:--=--=#*+=============+++++++++++*#%@%#*+###%%@%#+%*+#####*###*****#**==+*==-=-----+</br>
++:::::--:-==--:---===+++++++**++=-----==:+*-::-=----=#*+=============+++++++++*#%@%%#**#####%%#*##**#***++=+*+***#**+=++=-=====---</br>
+*-:::::-----===--=++++++++=**+==------=-::-::----=++*#%*================+++++*#%@@%#*+*##%###%#*+%****+**++=++***#**+++==-====+=--</br>
+*=::--------=+==+*#+==+++++*+==-=-----====++**##***+=++#+==================+*#%@%%%#*+*##%%####*+##***+++++++++#%##*+=+++==+*+#==+</br>
+=:::--------=+=+==*++++++==*+=-------==**++===========++#+=================+*#%%%##*+**###%%###*+*#++++++====+=*%%#*#+*++==+**+=++</br>
+:::--=====--=*=+=+#+++++==+*++==--=--==========-=+====*+**============---===+******++*####%%###*++#+=++++==+===+%%#*%#=++====+*=++</br>
+-:--==+*+=-=+#+==*#+=+=*=++*++===---=++=--==-=+=+######****=======--------==+++++*++**####%%##%*+=*+=++++++=====%%%%%%**+=+===+**#</br>
+=-=+###%++==+*+=+*#*++=+=+*#++=====++=+++=**+*++++##%#+=-==++===---===---======++**+%###*#%#**%#***+==+======--=#%%%%%**+-==+++**#</br>
++**#%#*%#+-+#+===+**+==+=**#*++===+++*#==---===+++*#%%#==--+++=--====---=====+*++%%%%%#***%%**###==+==+++==-=--=*%%%*#*++-===+=**#</br>
++**+%**%*--*#+=====+*+==++*#*+*++*++++*------=+++++#%%#+===+*#+======-======+++*%%%%%#%+**%%#+##*====-=======-==+%%%*+++=-++++==*#</br>
+=*+#*#*%*++*#+====+++===+**#**++++++*+++==---+++++++#%##+=+#%**+============++#%%@@%%#+++#%%#*##+====--=====---==#%%#***+===+++===</br>
++**###+#=-=*#+====+====+++*#*+*+++++++#=--=---+++++++#####%#%%#*++========++*%%*%%#%@%%#=+#%%##%+*==+===++++=====*%%*+**+====+====</br>
++*#*##*++===+*+++*======++*#****#**+++*=-------==++++#####%%###%%++======+*##*######%*+****###%%++=+%%%%%%##%%%%%%%%##%%%#**+++===</br>
++***##*+**=++++*#=====+++**#**++*=++++++=----=-+++*##%#*#***+*###++**+====*########**===*#%@@@@%#++##%%%%%********######*++***+===</br>
+*####*#%%*=+####*+====++++*#*+*++*++++*+=------=*#%@%%%*=======**+=+%#+++*##*#*##***==+#%%##***#####%%%%%%************+********+==</br>
+****#*++#+==+**#*=+++=+++**#**++*+*+++*#----=*%###%@%%%*+==+==+===++%%##*%%**####*++*%%%#********+*%%%%%%############*****+******+</br>
+*#**#*+++******++++*+=+****%#**+***+++*+==+##%#++**#%##**=====+++++*#*####%*###**#%%%#****#**##**%%%%%%%%%%%%%%%%%%%%%%%%#####****</br>
+%##**#+++=*##*++==+++**+***#***+*+++**++***#***==***%##***====++=*#***##%%#***#%%%%******##%%#######*********++++++*##%%%%%%%%%#**</br>
+%%%%*#++++++++==+*++==*****#*+****+++******+++*+=+**#%##***+=++*++***##%%###%%%%#******#%%#*===============++====++++++=+*#%%@%%%#</br>
+#%%%#*+*++++===++====***#***+=====--=--==========+***%%%***#*+=+*****++**%@%%*+******#%#+==================++======++===+**#@%#*#%</br>
+*##*++++=====+++++++=++++=+===-=========+=========***#%%****#*+++#*++++*#####****+*###+=============+**+====+*++=====++==***%@#**+</br>
+<!-- Image de profil -->
+</code>
       </div>
 
       <div id="rectexp">
