--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,7 +72,7 @@
          <p class="stitre"> Musicales, <i>Percussions Classiques</i> </p> Conservatoires Toulon-Provence-Méditerranée, 2008-2018 </br><i>Obtention du BEM, Niveau CEM </i>
       </div>
 
-      <div id="imageprofil"> 
+      <div id="imageprofilcode"> 
        <!-- <img id="imageprofil" src="../images/profil.jpg"  > -->
 	<code style="font-size: 6px;">----------------------------------------------------------------------------------------------------------------------------------</br>
 -------------------------------------------------------------------==-------------------------------------------------------------</br>
