--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,66 +72,9 @@
          <p class="stitre"> Musicales, <i>Percussions Classiques</i> </p> Conservatoires Toulon-Provence-Méditerranée, 2008-2018 </br><i>Obtention du BEM, Niveau CEM </i>
       </div>
 
-      <div id="imageprofilcode"> 
-       <!-- <img id="imageprofil" src="../images/profil.jpg"  > -->
-	<code style="font-size: 12px;">--------------------------------------------------------------------------------</br>
------------------------------------------++-------------------------------------</br>
-----------------------------------------=*+----==-------------------------------</br>
--------------------------------=--------+*=----=--------------------------------</br>
-------------------------------==*=-----+*++=--==-----=--------------------------</br>
-------------------------------+*#%***+*####*=+*+===+==--------------------------</br>
-----------------------=----==+*#%%%%%%%%%%%%%%%#***++=--=====-------------------</br>
-----------------------+=++*#%###%@@@@@@@@%@@%%%%%%%%#*******+**+=---------------</br>
---------------------=*##%%###*##%@@@@@@@@@@@@@@@@@@%%%%%%%%%%#=-----------------</br>
---------::--::----=*#%%%%%%####%@@@@@@@@@@@@@@@@@@@@@@@@%%%%##+=----------------</br>
------------------*#%%@%#%###**#%@@@@@@@@@@@@@@@@@@@%@@@@@@%#*==-----------------</br>
-----------------+#####%%#**+*%%%%@%@@@@@@@@@@@@@@@@%%@@@%%##*=------------------</br>
----------------+#%#####**++##%%%%%@%@@@@%%%%%%%%%%%%%%%@%%#**++==---------------</br>
-----:-:-------=*#%%#**##**##****##%%%%%%%%%#########%%%%%%%%#+==----------------</br>
-::::::::::--+*##%%%%####*#**++===+**#####***********##%%%%#%%##+=---------------</br>
-::::::::::-=+=+*#%####**+++++++====++++++====+++++****#%%%%###*=----------------</br>
-::::::::::-==++**#***#*++=======------------====+++++**#######+==-----:::---:---</br>
-:::::::::::-=+**+**++*++=---------------========+++++++*#%###*=---::::::::::::::</br>
-:::::::::::::-=+++*+++++--=++*****++======++*##%%##*####*%%##*+--:::::::::::::::</br>
-:::::::::::::--=++++*+*=+*****#####*++====+*#######***+**#%%##+--:::::::::::::::</br>
-::::::::::::::-=+++****+==+*##%%#%%#*=---=+**#%#%@%###*++*%%##+-::::::::::::::::</br>
-:::::::::::::::-=+*##*+==*##*###**#*=----=+***#***++++++++*%#+------::::::::::::</br>
-::::::::::::::::-+*%#*=------=====----::-==++=============+#*==-------::::::::::</br>
-:::::::::::::::::-+%#=::::::--------:::--==+++========-====#*=====------::::::::</br>
-::::::::::::::::::-##::.::::--------::---==++++====---====++========-----:::::::</br>
-:::::::::::::::::::-=::::::::----==-=**=+++##*++===========+=========----:::::::</br>
-:::::::::::::::::::--::::::------===*#*+****##**+========+=+=========-----::::::</br>
-::::::::::::::::::::-:::::------------===+*******+======++=+==========-------:::</br>
-::::::::::::::::::::--:::------------======+****++++++=+++++=========----------:</br>
-:::::::::::::::::::::-::------======+++*****##***##*++++++++=========-----------</br>
-:::::::::::::::::::::--------==+****+++++*+++**#***+++++++*==========-----------</br>
-:::::::::::::::::::::-=-------===--========++++*+++++++++*%+======--------------</br>
-::::::::::::::::::::::-+----------===++*********++++++++*%%%+=====--------------</br>
-::::::::::::::::::::::-=#+==------=========+++++++++++*#%%%%#*====--------------</br>
-:::::::::::::::::::::::=+#*+==---------========+++****%@@%%%%*+===--------------</br>
-::::::::::::::::::::::--++=+-+++==--====+++++++**##***%%@%%%##*======-----------</br>
-:::::::::::::::::::::--=++-=--=++**++++**##**####*+++*%%%%##**+=======----------</br>
-:::::::::::::::::::::--=-==-=--===+*#####%%##**++++++*%##*****+=======----------</br>
-:::::::::::::::::::------==-+----===+++++++++++++++++*##++*****++=======--------</br>
-:::::::::::::-::::-------=++==----==++++++++++++++++*%#*++#***###+#*======------</br>
-::::::::::::-*-:::---====*#+-*=----===++++++++++++++%#*#*+#**##%%*++++++====----</br>
-:::::::::::::+-----===+++*#*--*+=---====++++++++++*%%*#%#****####****+======----</br>
-::::::--:::--==---+*++===*#*---#+========++++++++*%@**#%%**#***#####*#*==----===</br>
--::::-=--:-=-=++=+**+====+#--=--#+========++++++*%@%**##%%*#*##******#*+++===--=</br>
-+:::---==-=+=++++*==---=---:===+*#+=========+++*#@%#**###%**#***+=++*##*+====+=-</br>
-+::----=+=+*=+++++=----=+++++++==+*===========+*%%#*+##%###+#*++++++*%#*++==**=+</br>
-::-===-=+++#+++=++==---==-====+++***=======--==+***+*##%%#*+*++++====%###+===+++</br>
---+*#==+*=*#++++*+====+===++++*#%*==+===--=--===++**###%##%*+======-=#%%#*===+*#</br>
-**###+-*+==++==+**+=+++*=--==++#%#=-=+====--===++#%%%#*##*%*===+===-=#%#*+==+++#</br>
-++#*#++#+==++=++**++++++=---++++##*+*#*========+#%@%#*+%%*#*==-====-=+%%**==++==</br>
-*###*==*+++====+*****++*=---==+++##%%%##+====+*#######**##%*=***##**##%#*#*+++==</br>
-**##**=+**+==++*#*++++++=----=*#%#***+*#+**==*####**==*%%%%#*#%%%#****####****==</br>
-**#***=***++++++**++*++*+--=**#%%%+===+=++%#*%*###**#%#******%%%%#######*******+</br>
-#*#*++*#*+=+++**##**+++*++##*=**%#*+==++***###***#%#***#####%%%#%%#####%%%%%%#**</br>
-%%#*++++==++=+****+*++++++++*++*##***=++*#*####%%#***##*+=========+===++++*#%%%#</br>
-*#*++===++=+=*+++=============+**%#**#++*+++#%#*****#*========++==+++===+=**%%**</br>
-<!-- Image de profil -->
-</code>
+      <div> 
+       <img id="imageprofil" src="../images/profilascii.png"  > 
+	
       </div>
 
       <div id="rectexp">
