--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,14 +67,13 @@
 	<p class="stitre">Master<i> Réalisateur en Informatique Musicale</i></p>Université Jean Monnet - Saint-Étienne, 2021-2023</br>
           <p class="stitre">Licence Professionnelle,<i> Nouvelles Technologies du Son</i></p>UFR Ingémedia - Toulon, 2020-2021</br>
          <p class="stitre">BTS Métiers de l'audiovisuel, <i>option métiers du son</i></p>Lycée Carnot - Cannes, 2018-2020</br> 
-         <p class="stitre"> Baccalauréat Scientifique Sciences de l'ingénieur,</br><i>Spécialité Informatique et Sciences du Numérique</i> </p>Lycée Langevin - La-Seyne-sur-mer, Promotion 2018</br>
+         <p class="stitre"> Baccalauréat Scientifique Sciences de l'ingénieur,</br><i>Spécialité Informatique et Sciences du Numérique</i> </p>Lycée Langevin - La-Seyne-sur-mer, Promotion 2018</br>
         </p>
          <p class="stitre"> Musicales, <i>Percussions Classiques</i> </p> Conservatoires Toulon-Provence-Méditerranée, 2008-2018 </br><i>Obtention du BEM, Niveau CEM </i>
       </div>
 
       <div> 
-       <img id="imageprofil" src="../images/profilascii.png"  > 
-	
+       <img id="imageprofil" src="../images/profilascii.png"  >    <!-- Image de profil -->
       </div>
 
       <div id="rectexp">
@@ -106,7 +105,7 @@
        <p class="stitre">Moustic Studio, pendant la durée du Festival De Cannes 2019</p> 
        <i>Assistant Son à Radio Festival </i></br>
        Post-production sonore d'émissions, réalisation de Quizz et Jingles sonores</br>
-        Installation extérieure de plateaux Radio pour interviews et émissions.</br>
+        Installation extérieure de plateaux Radio pour interviews et émissions.</br>
      
        <p class="stitre">AEBAC (Association des Étudiants du BTS Audiovisuel de Cannes)</p>
        <i>Membre du bureau, 2019-2020</i></br>
