--- a/pages/contact.html
+++ b/pages/contact.html
@@ -73,7 +73,7 @@
       </div>
 
       <div> 
-       <img id="imageprofil" src="../images/profilascii.png"  >    <!-- Image de profil -->
+       <img id="imageprofilcode" src="../images/profilascii.png"  >    <!-- Image de profil -->
       </div>
 
       <div id="rectexp">
