--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,7 +55,7 @@
 	      <div id="rectg">
         <p class="titre">Rémi GEORGES </p>
         <p class="text"> 
-		      <p class="stitre"> Computer Music Director, 
+		      <p class="stitre"> Computer Music Designer, 
 Sound Technician,</br>Live-Coder Artist </p>
         To send me digital postcards over the world wide web : </br>
         <b>remi.georges@protonmail.com</b> </br> 
@@ -90,7 +90,7 @@ Sound Technician,</br>Live-Coder Artist </p>
         <p class="titre">Professional</p>
       <p class="text">
 	      <p class="stitre">ORG-RCHBRN</p>
-	      <i>Computer Music Producer, since 2023</i></br>
+	      <i>Computer Music Designer, since 2023</i></br>
 		Collaborating with artist Vahan Soghomonian on sound installations ORG,</br>
   		ORG-RCHBRN, and MITRA. </br>
 	<p class="stitre">Cookie Collective</p>
