--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Contact</title>
+		<title>About</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../styles/monstyle.css">
     <link rel="icon" type="image/png" href="../images/favicon.png" />
@@ -38,7 +38,7 @@
           </li>
   	<li class="contact">
             <div class="dropdown">
-            <div class="dropbtn"><a href="contact.html">Contact</a></div>
+            <div class="dropbtn"><a href="contact.html">About</a></div>
             <div class="dropdown-content"></div>
   					</div></li>
 		    	   
