--- a/pages/son.html
+++ b/pages/son.html
@@ -33,7 +33,7 @@
             
 	  <li class="contact">
             <div class="dropdown">
-            <div class="dropbtn"><a href="contact.html">Contact</a></div>
+            <div class="dropbtn"><a href="contact.html">About</a></div>
             <div class="dropdown-content"></div>
   					</div></li>
 		    
