--- a/pages/visu.html
+++ b/pages/visu.html
@@ -29,7 +29,7 @@
             <div>
             <li class="contact">
             <div class="dropdown">
-            <div class="dropbtn"><a href="contact.html">Contact</a></div>
+            <div class="dropbtn"><a href="contact.html">About</a></div>
             <div class="dropdown-content"></li></ul></div>
             </br>
             </br>
