--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 						<li class="contact">
   					<div class="dropdown">
-  					<div class="dropbtn"><a href="pages/contact.html">Contact</a></div>
+  					<div class="dropbtn"><a href="pages/contact.html">About</a></div>
   					<div class="dropdown-content"></div>
   					</div>
           </li>
