--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Hi :) you're on my website-->
 <html>
     <link rel="stylesheet" type="text/css" href="styles/monstyle.css">
 	<head>
