--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
     <link rel="stylesheet" type="text/css" href="styles/monstyle.css">
 	<head>
-		<title>Rémi Georges</title>
+		<title>home</title>
 		<meta charset="utf-8">
     <link rel="icon" type="image/png" href="images/favicon.png" />
 		<!--<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/fantasque-sans-mono" type="text/css"/> -->
-		  <script defer data-domain="remigeorges.fr" src="https://plausible.vocoda.sonnelier.club/js/plausible.js"></script>
+		<!--<script defer data-domain="remigeorges.fr" src="https://plausible.vocoda.sonnelier.club/js/plausible.js"></script>-->
 
 	</head>
 	<!-- Menu deroulant -->
@@ -67,6 +67,19 @@
       
         
        </div>
+
+	   <div id="rectnews">
+        ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+        <h3>friends and cool links</h3>
+            <a href="https://forum.toplap.org/" target="_blank" rel="noopener noreferrer"><img src="https://and-kal.github.io/assets/images/toplap.gif"><span hidden="">TOPLAP</span></a>
+			<a href="https://www.adelfaure.net" title="adelfaure.net"><img alt="adelfaure.net" src="https://www.adelfaure.net/src/adl-site-badge.gif"><span hidden="">Adel Faure</span></a>
+			<a href="https://fungi.neocities.org" title="fungi.neocities.org"><img alt="fungi.neocities.org site" src="https://www.adelfaure.net/src/fungi-site-badge.gif"><span hidden="">Fungi</span></a>
+			<a href="https://mistigris.org" title="mistigris.org"><img alt="mistigris.org site" src="https://www.adelfaure.net/src/mist-badge.gif"><span hidden="">mistigris</span></a>
+		<h3>my badge</h3>
+		    <a href="https://ralt144mi.remigeorges.fr" title="ralt144mi.remigeorges.fr"><img alt="ralt144mi site" src="https://www.ralt144mi.remigeorges.fr/images/ralt_badge.gif"><span hidden="">ralt144mi</span></a>
+		</div>
+
+
 	
   <div class="footer">@2023    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
   </body>
