--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>About</title>
+		<title>about</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../styles/monstyle.css">
     <link rel="icon" type="image/png" href="../images/favicon.png" />
@@ -63,6 +63,10 @@ Sound Technician,</br>Live-Coder Artist </p>
         </p>
 		 </div>
 
+     <div> 
+      <img id="imageprofil" src="../images/profilascii.png"  >    <!-- Image de profil -->
+     </div>
+
    <!-- <div id="rectexp">
     <object data="../images/CV_ENG.pdf" type="application/pdf" width="100%" height="500px">
       <p>You can't open this pdf.<a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Download</a></p>
@@ -82,9 +86,7 @@ Sound Technician,</br>Live-Coder Artist </p>
  </br><i>Awarded the BEM (Brevet d'Études Musicales), CEM Level</i>
       </div>
 
-      <div> 
-       <img id="imageprofil" src="../images/profilascii.png"  >    <!-- Image de profil -->
-      </div>
+
 
       <div id="rectexp">
         <p class="titre">Professional</p>
@@ -129,7 +131,7 @@ Sound Technician,</br>Live-Coder Artist </p>
       </div>  
 
 
-  <div class="footer">@2023    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
+  <div class="footer">@2024    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
 	</body>
 
 </html>
