--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<a href="https://fungi.neocities.org" title="fungi.neocities.org"><img alt="fungi.neocities.org site" src="https://www.adelfaure.net/src/fungi-site-badge.gif"><span hidden="">Fungi</span></a>
 			<a href="https://mistigris.org" title="mistigris.org"><img alt="mistigris.org site" src="https://www.adelfaure.net/src/mist-badge.gif"><span hidden="">mistigris</span></a>
 		<h3>my badge</h3>
-		    <a href="https://ralt144mi.remigeorges.fr" title="ralt144mi.remigeorges.fr"><img alt="ralt144mi site" src="https://www.ralt144mi.remigeorges.fr/images/ralt_badge.gif"><span hidden="">ralt144mi</span></a>
+		    <a href="https://ralt144mi.remigeorges.fr" title="ralt144mi.remigeorges.fr"><img alt="ralt144mi site" src="https://ralt144mi.remigeorges.fr/images/ralt_badge.gif"><span hidden="">ralt144mi</span></a>
 		</div>
 
 
