--- a/pages/son.html
+++ b/pages/son.html
@@ -644,27 +644,15 @@
 		<div id="rectcomp2">
 			<p class="titre2">Sound Technician</p>
 			  <p>
-				<a href="#org">ORG-RCHBRN, Vahan Soghomonian</a>
+				<a href="#wip">wip</a>
 			  </p>
 			  <div id="centerpoint">
-			  <dialog id="org">
-				<h2>ORG-RCHBRN
+			  <dialog id="wip">
+				<h2>wip
 				</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
-			</div>
-			  <p>
-				<a href="#org2">ORG-RCHBRN2, Vahan Soghomonian</a>
-			  </p>
-			  <div id="centerpoint">
-			  <dialog id="org2">
-				<h2>ORG-RCHBRN2
-				</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-				<a href="#!" style="color:DarkRed;">Close</a>
-			  </dialog>
-			</div>
 			</div>
 
 
