--- a/pages/son.html
+++ b/pages/son.html
@@ -287,18 +287,15 @@
 			<p class="titre2">Residencies</p>
 						
 			  <p>
-				<a href="#overkill">Residency for Overkill Festival 2024</a>
+				<a href="#overkill">Residency at GRAME CNCM December 2024</a>
 			  </p>
 			  <div id="centerpoint">
 			  <dialog id="overkill">
 				<h2>
-					Overkill Festival, 2024
+					GRAME CNCM, 2024
 				</h2>
 				<p>
-					The Overkill festival is a playful art festival celebrating art house video games, 
-					interactive art and films as tools to engage in social challenges. 
-					The program of the festival regroups an exhibition, workshops, talks, experimental live performances and screenings. 
-					In 2023 The Overkill festival was also the stage of a LARP (live action role play) that each visitor can be part of. 
+					Residency at GRAME National Center for Musical Creation, with Sara Lehad, Turner Williams Jr. and Loic Ponceau for our Free Impro Electro Acoustic Group. 
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
